# sandbox

./: .gitignore
HmiUpdater/: HmiUpdater.pro  main.cpp  style.qrc  updatewindows.cpp  updatewindows.h
NeoBmpGeneratorTester/: NeoBmpGeneratorTester.pro  mainwindow.h  mainwindow.ui
TijImageWriter/: TijImageWriter.pro  deviceitem.cpp  deviceitem.h  devicemanager.cpp  devicemanager.h  devicewriter.cpp  devicewriter.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
mli tools/: libmessageFB-trunk.tar.bz2  system-update
mli tools/libmessageFB-trunk/: CMakeLists.txt  version.cmake
mli tools/libmessageFB-trunk/src/: CMakeLists.txt  main.c  messageFB.c  messageFB.h  messageFB.sh.in  test.c
protocol/: .gitignore  README.md
protocol/MClient/: CMakeLists.txt  main.cpp  mclient.cpp  mclient.h  mprinter.cpp  mprinter.h  mprintermanager.cpp  mprintermanager.h
protocol/MServer/: main.cpp
protocol/docs/: Tij-Protocol-Version1.xml
protocol/src/: CMakeLists.txt  commands.cpp  commands.h  icommand.h  iprotocol.h  mprotocol.h  version.h  version.h.in
protocol/src/client/: CMakeLists.txt  mclient.cpp  mclient.h  mprinter.h  mprintermanager.cpp  mprintermanager.h
protocol/src/client/tests/: CMakeLists.txt  mprintermanager_UnitTest.cpp
protocol/src/comms/: CMakeLists.txt  abstractsocket.h  comms.cpp  comms.h  unixsockets.cpp  unixsockets.h
protocol/src/comms/tests/: CMakeLists.txt  comms_UnitTest.cpp  unixsockets_UnitTest.cpp
protocol/src/tests/: CMakeLists.txt
protocol/test/: CMakeLists.txt
protocol/unit test/Client/: CMakeLists.txt  main.cpp
protocol/unit_test/Client/: CMakeLists.txt
sockets/: CMakeLists.txt  CMakeLists.txt.user.c80e071.4.9-pre1
sockets/samples/: client.cpp  server.cpp
sockets/src/: CMakeLists.txt  isocket.h  unixsocket.cpp  unixsocket.h
udpComm/: .gitignore  mkaddr.c
udpComm/client/: CMakeLists.txt  main.cpp
udpComm/samples/: client_udp.c  udp-broadcast-server.c
udpComm/server/: CMakeLists.txt  main.cpp
udpComm/src/: CMakeLists.txt  mclient.cpp  mclient.h  mserver.cpp  mserver.h  udpclient.cpp  udpclient.h  udpclientbcast.cpp  udpclientbcast.h  udpserver.h  udpserverbcast.cpp  udpserverbcast.h  udpsocket.cpp
udpComm/src/posix/: CMakeLists.txt  udpclient.cpp  udpclient.h  udpclientbcast.cpp  udpclientbcast.h  udpserver.cpp  udpserver.h  udpserverbcast.cpp  udpserverbcast.h  udpsocket.h
