CMAKE_MINIMUM_REQUIRED (VERSION 2.8)

PROJECT (messageFB C)

SET (APP_NAME messageFB)
SET (APP_BIN ${APP_NAME})
SET (APP_LIB ${APP_NAME})
SET (APP_UUID d1bd22cf-5e9b-4007-b580-6b7b01a57dbb)

INCLUDE (version.cmake)

# BUILD
ADD_DEFINITIONS (-DAPP_NAME="${APP_NAME}")

IF (EMBEDDED)
	MESSAGE (STATUS "Enable EMBEDDED")
	ADD_DEFINITIONS (-DEMBEDDED)
ENDIF ()

IF (NOT CMAKE_BUILD_TYPE)
	MESSAGE (STATUS "Setting Build Type to Release")
	SET (CMAKE_BUILD_TYPE "Release" CACHE STRING "Choose the type of build" FORCE)
ENDIF ()

SET (CMAKE_CXX_FLAGS_DEBUG "-DDEBUG -g -Wall")
SET (CMAKE_CXX_FLAGS_RELEASE "-DNDEBUG -O2 -finline-functions -s")

SET (CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
SET (CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
SET (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})

# INSTALL
IF (NOT DEFINED CMAKE_INSTALL_PREFIX)
	SET (CMAKE_INSTALL_PREFIX "/usr")
ENDIF ()

# UNINSTALL
ADD_CUSTOM_TARGET (uninstall xargs rm -rf < "${CMAKE_BINARY_DIR}/install_manifest.txt")

# ADD SUBDIRECTORIES
ADD_SUBDIRECTORY (src)
